--- a/templateInput/sample_dataset/css/index.css
+++ b/templateInput/sample_dataset/css/index.css
@@ -7,8 +7,7 @@ body{
     justify-content: space-around;
 }
 .page1{
-    min-height: 8in;
-    width: 10in;
+    width: 10in; 
     background-color: rgb(214, 219, 218);
     padding: 2vw;
     text-align: center;
@@ -20,20 +19,28 @@ body{
     justify-content: space-between;
     margin-top: 3vw;
 }
+.page1bodyleft{
+    width: 3in;
+    padding-left: 20px;
 
+}
 .page1footerleft{   
     background-color:rgb(238, 238, 238) ;
     padding-top:15px;
     padding-left: 15px;
+    padding-bottom: 15px;
+    font-size: 17px;
     border-top-left-radius: 20px;
     /* border-bottom-left-radius: 20px; */
 
 }
 .page1footerright{
+    font-size: 17px;
     background-color:rgb(238, 238, 238) ;
     padding-top:15px;
     padding-right: 15px;
-    border-bottom-right-radius: 20px;
+    padding-bottom: 15px;
+    border-bottom-right-radius: 16px;
 }
 .page1footerleftline{
     font-weight: 600;
