--- a/templateInput/mw-gen-030711-print/css/index.css
+++ b/templateInput/mw-gen-030711-print/css/index.css
@@ -70,26 +70,26 @@ body {
     justify-content: space-between;
     align-items: center;
   }
-  #image3_alt{
+  .image3_alt{
     display: none;
   }
-  #image1{
+  .image1{
     width: 1.4in;
     height: 1.4in;
   }
   
-  #image2{
+  .image2{
     width: 1.1in;
     height: 0.53in;
   }
-  #rightSec2Content > ol {
+  .rightSec2Content > ol {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
     padding-right: 0.4rem;
     margin: 0;
   }
-  #rightSec2Content2 > ol {
+  .rightSec2Content2 > ol {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
@@ -114,21 +114,21 @@ body {
     
   }
   @media all and (max-width: 8.22in){
-    #page1HeaderLeft{
+    .page1HeaderLeft{
       flex-direction: row;
       align-items: baseline;
     }
   
-    #image1{
+    .image1{
       width: 0.98in;
       height: 0.98in;
     }
   }
   @media all and (max-width: 7in){
-    #page1Header #page1HeaderRight #image3,#sec1line1 {
+    .page1Header .page1HeaderRight .image3,.sec1line1 {
       display: none;
     }  
-    #image3_alt{
+    .image3_alt{
       display: flex;
     }
     .page1BodyText1{
@@ -138,14 +138,6 @@ body {
     .leftSec1Text{
       -webkit-columns: 1;
       columns: 1;
-    }
-    #p1bs1rContent{
-      -webkit-columns: 1;
-      columns: 1;
-    }
-    #p1bs2Content{
-      columns: 1;
-      -webkit-columns: 1;
     }
   }
   @media print {
@@ -163,14 +155,13 @@ body {
     .page1HeaderLeft{
       display: flex;
     }
-    #page1Header #page1HeaderRight #image3,#sec1line1 {
+    .page1Header .page1HeaderRight .image3,.sec1line1 {
       display: flex;
     }  
-    #page1Header #page1HeaderRight #image3 {
+    .page1Header .page1HeaderRight .image3 {
       height: 0.2in;
     }
-    #image3_alt{
+    .image3_alt{
       display: none;
     }
   }
-  
